frontend/src/app/shared/image-display-student/image-display-student.component.scss
.main {
  overflow-y: auto;
  overflow-x: auto;
  height: 100%;
  padding: 0 0 0 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

// buttons

#buttonsDiv {
  vertical-align: center;
}

.buttons {
  height: 50px;
  font-size: 100%;
}

.mat-button-toggle-group {
  height: 50px;
  align-items: center;
}

.imgButton {
  width: 150px;
}

.imgButtonWarn {
  background-color: #ffc107
}

.zoomBtnSide {
  width: 81px;
}

.zoomBtn {
  width: 138px;
}

// Images and Canvases

#imgOuter {
  position: relative;
  align-content: center;
  padding: 10px 0 0 0px;
}

#imgInner {
  position: relative;
}

.canvas {
  position: absolute;
  top: 0;
  left: 0;
}

.level0 {
  z-index: 0;
}

.level1 {
  z-index: 1;
}

.level2 {
  z-index: 2;
}

.level3 {
  z-index: 3;
}

.level4 {
  z-index: 4;
}

.tipCanvas {
  position: absolute;
  padding: 5px;
  left: -800px;
  top: -100px;
  width: 250px;
  border: 1px solid gray;
  border-radius: 5px;
  background-color: rgba(255, 255, 255, 0.7);
}

.zoomLens {
  position: absolute;
}

.zoomDiv {
  width: 250px;
  height: 250px;
  border: 1px solid #d4d4d4;
  vertical-align: center;
  position: absolute;
}

// Mobile
#buttonsMobile {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

// Scrollbar

/* width */
::-webkit-scrollbar {
  width: 2px;
  height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: grey;
  border-radius: 0;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #b30000;
}

